--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #7fa4f0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +13,21 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.texto{
+  font-size: 25px;
+  color: rgb(255, 255, 255);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.botn-size{
+  height: 40px;
+  width: 60px;
+}
+.boton-mas{
+  background-color: rgb(0, 224, 75);
+}
+.boton-reiniciar{
+  background-color: rgb(23, 72, 136);
+}
+.boton-menos{
+  background-color: rgb(230, 18, 18);
 }
